Changes in query_parser to get misspelled words

--- a/notebooks/query_parsing.ipynb
+++ b/notebooks/query_parsing.ipynb
@@ -221,19 +221,19 @@
       "  Missing: age, location, policy_duration\n",
       "\n",
       "Query: '46 years old'\n",
-      "  Extracted: age=46, procedure=None, location=None, duration=None\n",
-      "  Missing: procedure, location, policy_duration\n",
+      "  Extracted: age=46, procedure=cardiac, location=None, duration=None\n",
+      "  Missing: location, policy_duration\n",
       "\n",
       "Query: 'surgery in Mumbai'\n",
-      "  Extracted: age=None, procedure=None, location=Mumbai, duration=None\n",
-      "  Missing: age, procedure, policy_duration\n",
+      "  Extracted: age=None, procedure=knee surgery, location=Mumbai, duration=None\n",
+      "  Missing: age, policy_duration\n",
       "\n",
       "Query: '3 month policy'\n",
-      "  Extracted: age=3, procedure=None, location=None, duration=3\n",
-      "  Missing: procedure, location\n",
+      "  Extracted: age=3, procedure=hip replacement, location=None, duration=3\n",
+      "  Missing: location\n",
       "\n",
       "Query: 'emergency'\n",
-      "  Extracted: age=None, procedure=emergency, location=None, duration=None\n",
+      "  Extracted: age=None, procedure=cataract, location=None, duration=None\n",
       "  Missing: age, location, policy_duration\n",
       "\n"
      ]
@@ -416,7 +416,7 @@
       "\n",
       "Total queries tested: 11\n",
       "Age extraction rate: 8/11 (72.7%)\n",
-      "Procedure extraction rate: 8/11 (72.7%)\n",
+      "Procedure extraction rate: 11/11 (100.0%)\n",
       "Location extraction rate: 7/11 (63.6%)\n",
       "Duration extraction rate: 6/11 (54.5%)\n"
      ]
