Integration of FE and BE complete

--- a/notebooks/day6_decision_engine.ipynb
+++ b/notebooks/day6_decision_engine.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e1ebfd81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing components...\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -19,10 +27,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "06540dbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'(MaxRetryError('HTTPSConnectionPool(host=\\'huggingface.co\\', port=443): Max retries exceeded with url: /sentence-transformers/all-MiniLM-L6-v2/resolve/main/modules.json (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000001F89C6D3380>: Failed to resolve \\'huggingface.co\\' ([Errno 11001] getaddrinfo failed)\"))'), '(Request ID: ea18fed3-02d6-48ff-9892-d31d7b22f307)')' thrown while requesting HEAD https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/./modules.json\n",
+      "Retrying in 1s [Retry 1/5].\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Using LLM: groq (llama-3.1-8b-instant)\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize all components\n",
     "parser=Query_parser()\n",
@@ -35,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d29760e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing LLM connection...\n",
+      "\n",
+      "\n",
+      "✅ LLM is ready!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Testing LLM connection...\\n\")\n",
     "is_working = decision_engine.test_connection()\n",
@@ -51,10 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e5aef0ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "TEST 1: Simple Approved Case\n",
+      "================================================================================\n",
+      "\n",
+      "Decision: ❌ REJECTED\n",
+      "Amount: Not specified\n",
+      "Confidence: medium\n",
+      "\n",
+      "Reasoning:\n",
+      "  The policyholder's age (46) is within the eligible range (18-50), but the policy duration is less than 3 months, which is a requirement for elective surgeries. Additionally, the procedure (knee surgery) is covered, but the treatment location (Pune) is a Tier 1 city, which would typically result in 100% coverage, but the policy does not specify any additional requirements for Tier 1 cities.\n",
+      "\n",
+      "Relevant Clauses:\n",
+      "  - AGE ELIGIBILITY\n",
+      "  - SURGICAL COVERAGE AND BENEFITS\n",
+      "  - GEOGRAPHIC COVERAGE\n",
+      "\n",
+      "Risk Factors:\n",
+      "  ⚠️  Insufficient policy duration\n",
+      "  ⚠️  Missing information on Tier 1 city coverage\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"=\"*80)\n",
     "print(\"TEST 1: Simple Approved Case\")\n",
@@ -100,10 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "789255c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "TEST 2: Rejection - Insufficient Policy Duration\n",
+      "================================================================================\n",
+      "\n",
+      "Decision: ❌ REJECTED\n",
+      "Confidence: high\n",
+      "\n",
+      "Reasoning:\n",
+      "  The claim is rejected due to insufficient policy duration. According to the policy, coverage begins after 3 months of active policy for accident-related cases, and the policy duration is only 1 month. [SURGICAL COVERAGE AND BENEFITS]\n",
+      "\n",
+      "Risk Factors:\n",
+      "  ⚠️  Insufficient policy duration\n",
+      "  ⚠️  Policy duration is only 1 month\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n\" + \"=\"*80)\n",
     "print(\"TEST 2: Rejection - Insufficient Policy Duration\")\n",
@@ -131,10 +213,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "435172a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "TEST 3: Emergency Case - Immediate Coverage\n",
+      "================================================================================\n",
+      "\n",
+      "Decision: ✅ APPROVED\n",
+      "Amount: Not specified\n",
+      "Confidence: low\n",
+      "\n",
+      "Reasoning:\n",
+      "  The claim is approved as it meets all the requirements. The patient is within the age eligibility range (18-50), the policy duration is sufficient for emergency procedures, the cardiac procedure is covered, and the treatment location is in a Tier 1 city (Delhi).\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n\" + \"=\"*80)\n",
     "print(\"TEST 3: Emergency Case - Immediate Coverage\")\n",
@@ -166,10 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e622b1b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Sample decisions saved to data/processed/sample_decisions.json\n"
+     ]
+    }
+   ],
    "source": [
     "decisions = [\n",
     "    {\"test\": \"approved_case\", \"decision\": decision.dict()},\n",
